bundled_metadata/force-app/main/default/objects/AFH_ScoringMatrix__c/AFH_ScoringMatrix__c.object-meta.xml
<CustomObject>
    <label>Scoring Matrix</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>Scoring Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>