bundled_metadata/force-app/main/default/objects/AFH_ScoringMatrix__c/fields/AFH_Account__c.field-meta.xml
<CustomField>
    <fullName>AFH_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scoring Matrix</relationshipLabel>
    <relationshipName>Scoring_Matrix</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>