bundled_metadata/force-app/main/default/objects/AFH_ScoringMatrix__c/fields/AFH_Score_Count__c.field-meta.xml
<CustomField>
    <fullName>AFH_Score_Count__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>