bundled_metadata/force-app/main/default/objects/AFH_ScoringMatrix__c/fields/AFH_Score_Matrix_Name__c.field-meta.xml
<CustomField>
    <fullName>AFH_Score_Matrix_Name__c</fullName>
    <label>Score Matrix Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>