bundled_metadata/force-app/main/default/objects/AFH_ScoringMatrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AFH_Account__c</columns>
    <columns>AFH_Score_Matrix_Name__c</columns>
    <columns>AFH_Score_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>